Factory pattern, questions